<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.barreto.deliveryscanner.ui.login.LoginFragment"
        android:label="@string/login_title">
        <action
            android:id="@+id/action_loginFragment_to_scannerFragment"
            app:destination="@id/scannerFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.barreto.deliveryscanner.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner">
        <action
            android:id="@+id/action_scannerFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
        <action
            android:id="@+id/action_scannerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.barreto.deliveryscanner.ui.result.ResultFragment"
        android:label="@string/title_result" />
</navigation>
